--- a/style.css
+++ b/style.css
@@ -1,11 +1,49 @@
 .container-header {
         display: flex;
+        background-color: black;
+}
+
+.item-header {
+    padding: 10px;
+    width: 20%;
+    color: #fa5f06;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    white-space: nowrap;
+    overflow:hidden
 }
 
 .container-main {
     display: flex;
+    min-height: 60vh;
+}
+
+.aside {
+    background-color: #fa5f06;
+    width: 250px;
 }
 
 .container-footer {
     display: flex;
+    background-color: #fa5f06;
 }
+
+.item-footer {
+    padding: 10px;
+    text-align:center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.github {
+    width: 250px;
+    
+}
+
+.since {
+    width: calc(100% - 250px);
+}
+
+
