--- a/style.css
+++ b/style.css
@@ -1,49 +1,79 @@
+* {
+    margin: 0;
+    padding: 1;
+    /* box-sizing: border-box; */
+  }
+
 .container-header {
         display: flex;
-        background-color: black;
+        background-color: black; 
+        font-size: 20px;
+        font-family: Tahoma, sans-serif;
+        color: #fa5f06;
+        font-weight: bold;
+        border-bottom: 1px solid black;
 }
 
 .item-header {
     padding: 10px;
     width: 20%;
-    color: #fa5f06;
-    font-size: 25px;
-    font-weight: bold;
     text-align: center;
     vertical-align: middle;
-    white-space: nowrap;
+    /* white-space: nowrap; */
     overflow:hidden
 }
 
 .container-main {
     display: flex;
-    min-height: 60vh;
+    
+    font-family: Tahoma, sans-serif;
+}
+
+.main {
+    font-size: 15px;
+    background-color: #fa5f06;
+    width: 260px;
 }
 
 .aside {
-    background-color: #fa5f06;
-    width: 250px;
+    padding-top: 10px;
+    padding-left: 10px;
+    height: 180px;
+    margin: 0;
+    border-bottom: 2px solid #fa5f06;
+}
+
+.item-contact {
+    padding-bottom: 10px;
+    font-weight: bold;
+}
+
+.section {
+ flex-basis: 180vh;
 }
 
 .container-footer {
     display: flex;
-    background-color: #fa5f06;
+    
 }
 
 .item-footer {
     padding: 10px;
     text-align:center;
-    font-size: 20px;
+    font-size: 15px;
+    font-family: Tahoma, sans-serif;
     font-weight: bold;
 }
 
 .github {
-    width: 250px;
-    
+    width: 240px;
+    background-color: #fa5f06;
 }
 
 .since {
-    width: calc(100% - 250px);
+    /* background-color: chartreuse; */
+    align-self: flex-start
+    
 }
 
 
