--- a/style.css
+++ b/style.css
@@ -4,23 +4,47 @@
     box-sizing: border-box;
   }
 
+  .container {
+      display: flex;
+      flex-direction: column;
+  }
+
 .container-header {
         display: flex;
-        background-color: black; 
         font-size: 20px;
         font-family: Tahoma, sans-serif;
-        color: #fa5f06;
+        color: black;
         font-weight: bold;
-        border-bottom: 1px solid black;
 }
 
+.name-and-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+    background-color: #fa5f06; 
+    width: 99%;
+}
+
+.name {
+    align-self: center;
+    padding-top: 10px;
+}
+
+.empty {
+    background-color: white;
+    height: 40px;
+}
+
+.item {
+    display: flex;
+    padding-bottom: 10px;
+}
 .item-header {
-    padding: 10px;
-    width: 20%;
     text-align: center;
     vertical-align: middle;
-    /* white-space: nowrap; */
-    overflow:hidden
+    width: 16.67%;
+    overflow:hidden;
 }
 
 .line {
@@ -29,27 +53,21 @@
 
 .container-main {
     display: flex;
-    
     font-family: Tahoma, sans-serif;
 }
 
-.main {
-    font-size: 13px;
-    background-color: #fa5f06;
-    width: 260px;
+.colomn-main-first {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    padding: 20px;
 }
 
-.aside {
-    padding-top: 10px;
-    padding-left: 10px;
-    height: 180px;
-    margin: 0;
-    border-bottom: 2px solid #fa5f06;
-}
-
-.item-contact {
-    padding-bottom: 10px;
-    font-weight: bold;
+.colomn-main-second {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    padding: 20px;
 }
 
 .section {
@@ -71,14 +89,27 @@
 
 .github {
     width: 240px;
-    background-color: #fa5f06;
 }
 
 .since {
     margin-left: auto;
     margin-right: auto;
     align-self: flex-start
-    
 }
 
+.skill {
+    padding-top: 20px;
+}
 
+.education {
+    padding-top: 20px;
+}
+
+.contact {
+    padding-top: 20px;
+}
+
+.highlight-title {
+    border-left: 5px solid #fa5f06;
+    padding-left: 5px;
+}
