--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
 
   @font-face {
     font-family: 'Ubuntu';
-    src: url("/assets/fonts/Ubuntu/Ubuntu-Bold.ttf");
+    src: url("./assets/fonts/Ubuntu/Ubuntu-Bold.ttf");
     font-weight: 500;
 
   }
   @font-face {
     font-family: 'Ubuntu-Regular';
-    src: url("/assets/fonts/Ubuntu/Ubuntu-Regular.ttf");
+    src: url("./assets/fonts/Ubuntu/Ubuntu-Regular.ttf");
     font-weight: 300;
   }
 
@@ -20,6 +20,13 @@
       min-height: 100vh;
   }
 
+  a.nav-link {
+    text-decoration: none;
+    color: black;
+    font-family: "Ubuntu";
+    font-size: 20px;
+
+  }
   .container {
       display: flex;
       max-width: 1440px;
@@ -46,9 +53,9 @@
 }
 
 .name {
-    align-self: center;
     padding-top: 5px;
     padding-bottom: 5px;
+    text-align: center;
 }
 
 .empty {
@@ -57,15 +64,18 @@
 }
 
 .nav {
-    display: flex;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    padding-bottom: 8px;
     text-align: center;
-
 }
+
+.nav-list {
+    display: flex;
+    list-style-type: none;
+}
+
 .item-nav {
-    width: 16.67%;
-    overflow:hidden;
+     width: 16.67%;
+     overflow:hidden;
 }
 
 .container-main {
@@ -114,6 +124,10 @@
 
 .skill {
     padding-top: 20px;
+}
+
+.shift-list {
+    padding-left: 25px;
 }
 
 .education {
