--- a/style.css
+++ b/style.css
@@ -95,22 +95,22 @@
 
 .container-main {
     display: flex;
+    flex-wrap: wrap;
     font-family: "Ubuntu-Regular";
 }
 
-.colomn-main-first {
+.colomn-main-first, .colomn-main-second  {
     display: flex;
     flex-direction: column;
-    width: 50%;
     padding: 20px;
+    width: 50%;
 }
 
-.colomn-main-second {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    padding: 20px;
-}
+@media (max-width: 768px) {
+    .colomn-main-first, .colomn-main-second {
+      width: 100%;
+    }
+  }
 
 .container-footer {
     display: flex;
