--- a/style.css
+++ b/style.css
@@ -181,11 +181,13 @@
 .line {
     border-bottom: 4px solid #fa5f06;
 }
- .img-html, .img-css, .img-github, .img-csharp, .img-python, .img-lua, .img-r {
+ .img-html, .img-css, .img-github, .img-csharp, .img-python, .img-lua, 
+ .img-r, .img-location, .img-email, .img-telegram, .img-discord {
    display: flex;
  }
 
- .name-html, .name-css, .name-github, .name-csharp, .name-python, .name-lua, .name-r {
+ .name-html, .name-css, .name-github, .name-csharp, .name-python, .name-lua, 
+ .name-r, .name-location, .name-email, .name-telegram, .name-discord {
     align-self: center;
  }
 
